<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/navigation_bottom"
            app:startDestination="@id/repoFragment">

    <fragment android:id="@+id/repoFragment" android:name="com.test.codechallenge.ui.Repo.RepoFragment"
              android:label="Repo"/>
    <fragment android:id="@+id/settingsFragment" android:name="com.test.codechallenge.ui.settings.SettingsFragment"
              android:label="Settings" tools:layout="@layout/fragment_settings"
    />
</navigation>