<resources>
    <string name="app_name">Code Challenge</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="repo">Repo</string>
    <string name="settings">Settings</string>
    <string name="trending">Trending</string>
</resources>
